--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="icon"> 
             <i class="fa-solid fa-magnifying-glass" style="color: #130101;"></i>
             <input type="text" name="Serch" id="Serch" placeholder="Serch"></div>        
-           <button><a href="http://localhost/phppro/index.php">Sign In</a></button>
+           <button><a href="https://github.com/MinalMahajan123/Hotel-Shadow/blob/main/index.php">Register</a></button>
            <button><a href="#">Book Now</a></button>        
     </div>
 
